--- a/main/index.css
+++ b/main/index.css
@@ -3,6 +3,26 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+:root {
+  --hl-teal: #81e6d9;
+  --hl-blue: #b9d0e5;
+  --hl-pink: #fbb6ce;
+  --hl-yellow: #faf089;
+  --hl-green: #90edb3;
+  --hl-gray: #e2e8f0;
+  --border: rgba(120, 120, 120, 0.34);
+  --bg-code: rgb(185, 185, 185, 0.15);
+  --outline-clr: rgb(66, 153, 225, 0.6);
+}
+
+.chakra-ui-dark {
+  --hl-teal: #285e61;
+  --hl-blue: #4a79a6;
+  --hl-pink: #97266d;
+  --hl-yellow: #975a16;
+  --hl-green: #0c6c33;
+  --hl-gray: #4a5568;
 }
