custom initial color mode

--- a/main/index.css
+++ b/main/index.css
@@ -1,3 +1,9 @@
+@media (prefers-color-scheme: dark) {
+  :where(.clr-scheme-dark) {
+    background-color: #1a202c;
+  }
+}
+
 body {
   margin: 0;
 }
